Updated Java (markdown)