@@ -1,2 +1,5 @@
 Requested array size exceeds VM limit:
 - https://docs.oracle.com/javase/7/docs/webnotes/tsg/TSG-VM/html/memleaks.html#gbyvi
+
+http://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html#BABCBGHF
+-XX:+AggressiveOpts
